<resources>
    <string name="app_name">Seamansbook test application</string>
    <string name="select_answer">Please, select answer</string>
    <string name="quiz_result_activity_go_back">Back to main screen</string>
    <string name="quiz_result_activity_main_text">Result: %1$s%%</string>
    <string name="main_activity_update_text">"A new version of the questions has been released, do you want to update the database of questions to the latest version? "</string>
    <string name="main_activity_update_button">Update questions</string>
    <string name="main_activity_start_button">Start</string>
    <string name="main_activity_enable_hints">Enable hints</string>
    <string name="main_activity_disable_hints">Disable hints</string>
    <string name="login_activity_main_button">Log In using Google</string>
    <string name="download_questions_activity_main_button">Download questions</string>
    <string name="check">Check</string>
    <string name="finish_button_text">Finish</string>
    <string name="error__describe_problem">Please, describe your problem</string>
    <string name="report_sent">Your report was sent!</string>
    <string name="question_deleted_from_favorites">"The question has been removed from favorites "</string>
    <string name="question_added_to_favorites">"The question has been added to favorites "</string>
    <string name="in_development">Coming soon...</string>
    <string name="test_result_title">Test Results</string>
    <string name="your_result">Your result:</string>
    <string name="pass_percent">Pass percent:</string>
    <string name="added_to_favorites">Added to favorites:</string>
    <string name="start_again_button">Start again</string>
    <string name="favorites_button">Favorites</string>
    <string name="main_screen_button">Main Screen</string>
    <string name="report_question_title">"Complain a question "</string>
    <string name="describe_problem_placeholder">Describe the problem...</string>
    <string name="send_report_button">"Submit a complaint "</string>
    <string name="close_button">Close</string>
    <string name="statistics_amin_screen_title">Statistics</string>
    <string name="statistics_main_screen_description">Helps assess the current level of knowledge and track learning progress.</string>
    <string name="favorites_main_screen_title">Favorites</string>
    <string name="favorites_main_screen_description">Allows you to add necessary questions to a separate category for further study.</string>
    <string name="progress_title">Progress</string>
    <string name="main_block_main_screen_description">For effective learning, try to focus on the process and reach the maximum level on the progress scale.</string>
    <string name="download_title">Install</string>
    <string name="installation_subtitle">To use the application, you must install additional files containing the latest version of the test.</string>
    <string name="install_button">Install</string>
    <string name="leave_the_test">Leave test</string>
    <string name="leave_the_test_confirmation">Are you sure you want to leave this test?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="dropdown_option1">Error in question</string>
    <string name="dropdown_option2">Error in answer option</string>
    <string name="dropdown_option3">The question is not displayed correctly</string>
    <string name="dropdown_option4">Correct answer is incorrect</string>
    <string name="martest_hyperlink"><a href="https://t.me/martest">@MARTEST</a></string>
    <string name="martesthelp_hyperlink"><a href="https://t.me/martesthelp">@martesthelp</a></string>
    <string name="download_questions_back_to_home">Back to home screen</string>
    <string name="select_language_title">Choose language</string>
    <string name="nav__item_home">Home</string>
    <string name="nav__item_statistics">Statistics</string>
    <string name="nav__item_search">Search</string>
    <string name="nav__item_favorites">Favorites</string>
    <string name="nav__item_settings">Settings</string>
    <string name="card_favorite_question">Question:</string>
    <string name="card_favorite_answer">Correct answer:</string>
    <string name="card_statistics_result">Result</string>
    <string name="card_statistics_wrong">Wrong</string>
    <string name="card_wrong_answer_question">Question:</string>
    <string name="card_wrong_answer_user_answer">Selected answer:</string>
    <string name="card_wrong_answer_correct_answer">Correct answer:</string>
    <string name="fragment_favorites_title">Favorite questions</string>
    <string name="fragment_main_hints">Hints</string>
    <string name="fragment_search_title">Channels</string>
    <string name="fragment_search_first_block_description">Latest news and new changes Subscribe to always be aware of what is happeningLatest news and new changes Subscribe to always be aware of what is happening</string>
    <string name="fragment_search_second_block_title">Help with passing</string>
    <string name="fragment_search_second_block_description">We will help you pass tests of any complexity</string>
    <string name="fragment_search_third_block_title">Forum</string>
    <string name="fragment_search_third_block_description">If you need answers to questions, follow the link and you will find out the answers to all your questions, and also help others with answers</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_item_app_language">Language</string>
    <string name="fragment_settings_item_app_theme">Theme</string>
    <string name="fragment_settings_item_push_notifications">Push-notifications</string>
    <string name="fragment_settings_item_news">News and updates</string>
    <string name="fragment_settings_item_delete_favorites">Clear favorites</string>
    <string name="fragment_settings_item_delete_statistics">Reset statistics</string>
    <string name="fragment_settings_item_support">Support</string>
    <string name="fragment_statistics_title">Statistics</string>
    <string name="fragment_statistics_first_block_title">Info</string>
    <string name="fragment_statistics_first_block_item_one">Successfully completed tests</string>
    <string name="fragment_statistics_first_block_item_two">Failed tests</string>
    <string name="fragment_statistics_first_block_item_three">Level of training</string>
    <string name="fragment_statistics_second_block_item_one">"Initial result "</string>
    <string name="fragment_statistics_second_block_item_two">Average result</string>
    <string name="fragment_statistics_second_block_item_three">Best result</string>
    <string name="fragment_theme_selection_title">Select theme</string>
    <string name="fragment_wrong_answers_title">Wrong answers</string>
    <string name="fragment_main_tint">Show correct answer after answer</string>
    <string name="fragment_settings_second_block_title">Notifications</string>
    <string name="fragment_settings_first_block_title">General</string>
    <string name="fragment_settings_third_block_title">Data and memory</string>
    <string name="fragment_settings_fourth_block_title">Help</string>
    <string name="fragment_settings_hint_one">Through push-notifications, we aim to inspire you to reach ever greater accomplishments.</string>
    <string name="fragment_settings_hint_two">Only important notifications. Here you will find information about major updates, as well as exclusive promotions</string>
    <string name="fragment_settings__theme_default">System</string>
    <string name="fragment_settings__theme_light">Light</string>
    <string name="fragment_settings__theme_dark">Dark</string>
    <string name="notifications_dialog_title">Notifications</string>
    <string name="notifications_title_update">Update</string>
    <string name="notifications_title_news">News</string>
    <string name="notifications_learn_more_btn">Learn more</string>
    <string name="notifications_update_btn">Update</string>
    <string name="button_continue">Continue</string>
    <string name="button_leave">Leave</string>
    <string name="no_data_available">Empty...</string>
    <string name="knowledge_level_one">Low</string>
    <string name="knowledge_level_two">Medium</string>
    <string name="knowledge_level_three">Ready</string>
    <string name="clear_statistics">Reset statistics</string>
    <string name="clear_statistics_description">Are you sure you want to delete all statistics?</string>
    <string name="clear_favorites">Reset favorites</string>
    <string name="clear_favorites_description">"Are you sure you want to delete all your favorites? "</string>
    <string name="statistics_cleared" >"Statistics cleared successfully! "</string>
    <string name="favorites_cleared" >"The favorites have been successfully cleared! "</string>
    <string name="notifications_dialog_no_notifications" >"No notifications "</string>

</resources>