<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"

    android:orientation="vertical"
    app:layout_constraintHeight_max="wrap">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border_secondary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_result_title"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/your_result"
                android:textColor="@color/primaryText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/pass_percent"
                android:textColor="@color/primaryText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/added_to_favorites"
                android:textColor="@color/primaryText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/yourResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#33C98E"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0"
                tools:text="75%" />

            <TextView
                android:id="@+id/passPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="17sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                tools:text="67%" />

            <TextView
                android:id="@+id/addedToFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                tools:text="3" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startAgainButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="28dp"
                android:background="@drawable/round_back_green20"
                android:text="@string/start_again_button"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/favoritesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:background="@drawable/border_ocean_gradient"
                android:text="@string/favorites_button"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startAgainButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backToMainScreenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:background="@drawable/border_ocean_gradient"
                android:text="@string/main_screen_button"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favoritesButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>