<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"

    android:orientation="vertical"
    app:layout_constraintHeight_max="wrap">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/border_secondary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_question_title"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/reportText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="start|top"
                android:hint="@string/describe_problem_placeholder"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="60dp"
                tools:layout_editor_absoluteY="30dp"
                android:autofillHints="text" />

            <Spinner
                android:id="@+id/dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/reportText" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="28dp"
                android:background="@drawable/round_back_green20"
                android:text="@string/send_report_button"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dropdown_menu" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/closeModal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:background="@drawable/border_ocean_gradient"
                android:text="@string/close_button"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sendReport" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>