<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/notifications_border"

        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_the_test"
                android:textColor="@color/primaryText"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/closeDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:src="@drawable/icon__quit"
                app:tint="@color/primaryText" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/leave_the_test_confirmation"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="28dp"
            android:background="@drawable/round_back_green20"
            android:text="@string/button_continue"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/leaveTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"
            android:background="@drawable/border_ocean_gradient"
            android:text="@string/button_leave"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-17dp"
        android:src="@drawable/icon__close_modal"
        app:tint="#00CB47" />
</LinearLayout>